# simple-todo-desktop

./: CHANGELOG.md  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
docs/: index.html
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  domain.rs  lib.rs  main.rs  scheduler.rs
src-tauri/src/db/: mod.rs  repo.rs
src/lib/: api.ts  dateUtils.ts  stores.ts  types.ts  voice.ts
src/lib/components/: EditModal.svelte  GroupSection.svelte  QuickAdd.svelte  ScheduleView.svelte  TagFilter.svelte  TaskItem.svelte  ThemeSwitcher.svelte
src/routes/: +layout.svelte  +page.svelte
