[package]
name = "simple-todo"
version = "0.1.0"
description = "Simple TODO Desktop"
authors = ["ktateishi"]
edition = "2021"

[lib]
name = "simple_todo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart    = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite   = { version = "0.32", features = ["bundled"] }
tokio      = { version = "1",  features = ["time", "sync", "macros", "rt"] }
chrono     = { version = "0.4", features = ["serde"] }

[profile.release]
panic         = "abort"
codegen-units = 1
lto           = true
opt-level     = 3
strip         = true
